tests/builds/pass/float_check.cpl

int main(int argc, char**argv)
{
	float pi = 3.14;
	float a = pi + 2.0;
	return 0;
}
