tests/builds/fail/super_not_first_line_in_constructor.cpl
struct MyStruct {
	int a;
	int b;

	MyStruct(int e, int f) {
		a = e;
		b = f;
	}

	~MyStruct() {

	}
};

struct YourStruct extends MyStruct {
	float t;
	YourStruct(int e1, int f1, float c) {
		t = c;
		super(e1, f1);
	}

	~YourStruct() {

	}
};

int main(int argc, char**argv) {
	return 0;
}
